[package]
name = "nera-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nera-core = {path = "../nera-core"}
nera-sandbox = {path = "../nera-sandbox"}
nera-policy = {path = "../nera-policy"}
nera-audit = {path = "../nera-audit"}
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
anyhow = "1.0.102"
tower-http = { version = "0.6.8", features = ["trace"] }
thiserror = "2.0.18"

